# dcp-ops-monitor

./: .coderabbit.yaml  .env.example  .flake8  .gitignore  .lintstagedrc.json  .mcp.example.json  .mise.toml  .prettierignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  biome.jsonc  cdk.json  docker-compose.yaml  eslint.config.mjs  jest.config.js  lefthook.yml  package-lock.json  package.json  pyproject.toml
lambda/dcp_etl/: Dockerfile  pyproject.toml
lambda/dcp_etl/src/: handler.py
lambda/dcp_etl/src/application/: dcp_ops.py
lambda/dcp_etl/src/domain/: dcp_ops_domain.py  dcp_value_object.py  interface.py
lambda/dcp_etl/src/settings/: settings.py
lambda/dcp_etl/tests/: conftest.py
lambda/dcp_etl/tests/application/: test_dcp_ops.py
lambda/dcp_etl/tests/domain/: conftest.py  test_dcp_ops_domain.py
lambda/dcp_etl/tests/infrastructure/: test_s3.py  test_sns.py  test_ssm.py
lambda/dcp_notification/: pyproject.toml  requirements.txt
lambda/dcp_notification/src/: handler.py
lambda/dcp_notification/src/application/: dcp_ops_app.py  notification.py
lambda/dcp_notification/src/domain/: factory.py  usecase.py
lambda/dcp_notification/src/infrastructure/: line_notification.py
lambda/dcp_notification/src/settings/: settings.py
lambda/error-notification/: README.md  pyproject.toml
lambda/error-notification/src/: handler.py  settings.py
lambda/error-notification/src/application/: __init__.py  error_notification_service.py  message_formatter.py
lambda/error-notification/src/config/: settings.py
lambda/error-notification/src/domain/: __init__.py  cloudwatch_logs_parser_interface.py  error_log_interface.py  error_log_object.py  error_log_record.py  exceptions.py  line_message.py  line_notifier_interface.py  notification_object.py  parsed_cloudwatch_logs_data.py  s3_client_interface.py  storage_interface.py  storage_object.py
lambda/error-notification/src/infrastructure/: __init__.py  cloudwatch_logs_adapter.py  cloudwatch_logs_parser.py  line_notifier.py  line_notifier_adapter.py  s3_client.py  s3_object_repository.py  ssm_parameter.py
lambda/error-notification/src/presentation/: __init__.py  error_notification_handler.py
lambda/error-notification/tests/: conftest.py
lambda/error-notification/tests/application/: __init__.py  test_error_notification_service.py  test_message_formatter.py
lambda/error-notification/tests/domain/: test_error_log_record.py
lambda/error-notification/tests/fixtures/: __init__.py  cloudwatch_logs_events.py
lambda/error-notification/tests/infrastructure/: test_cloudwatch_logs_adapter.py  test_cloudwatch_logs_parser.py  test_line_notifier.py  test_s3_client.py  test_s3_object_repository.py
lambda/error-notification/tests/presentation/: test_error_notification_handler.py
lambda/etl/: pyproject.toml
lambda/etl/src/: handler.py  settings.py
lambda/etl/src/application/: etl.py  extraction.py  notification.py  transform.py
lambda/etl/src/config/: settings.py
lambda/etl/src/domain/: dcp_ops_domain.py  dcp_value_object.py  extraction.py  interface.py  notification.py  transform.py  value_object.py
lambda/etl/tests/: conftest.py
lambda/etl/tests/application/: conftest.py  test_dcp_ops.py  test_etl.py  test_extraction.py  test_transform.py
lambda/etl/tests/domain/: conftest.py  test_dcp_ops_domain.py  test_dcp_value_object.py  test_extraction.py  test_transform.py  test_value_class.py
lambda/etl/tests/infrastructure/: test_ssm.py
lambda/summary-notification/: README.md  pyproject.toml
lambda/summary-notification/src/: handler.py
lambda/summary-notification/src/application/: __init__.py  indicators_calculator.py  message_formatter.py  summary_notification_service.py
lambda/summary-notification/src/config/: settings.py
lambda/summary-notification/src/domain/: __init__.py  asset_interface.py  asset_object.py  exceptions.py  indicator_object.py  indicators_calculator.py  notification_interface.py
lambda/summary-notification/src/infrastructure/: __init__.py  google_sheet_asset_repository.py  line_notifier.py  s3_asset_repository.py  ssm_parameter.py
lambda/summary-notification/src/presentation/: __init__.py  summary_notification_handler.py
lambda/summary-notification/tests/: conftest.py
lambda/summary-notification/tests/application/: test_indicators_calculator.py  test_message_formatter.py  test_summary_notification_service.py
lambda/summary-notification/tests/domain/: test_asset_object.py  test_indicator_object.py  test_indicators_calculator.py
lambda/summary-notification/tests/infrastructure/: test_line_notifier.py  test_s3_asset_repository.py
lambda/summary-notification/tests/presentation/: test_summary_notification_handler.py
lambda/web-scraping/: Dockerfile  README.md  pyproject.toml
lambda/web-scraping/src/: handler.py  settings.py
lambda/web-scraping/src/application/: __init__.py  convert_service.py  extraction.py  message_formatter.py  notification.py  notification_service.py  transform.py  web_scraping_service.py
lambda/web-scraping/src/config/: settings.py
lambda/web-scraping/src/domain/: __init__.py  artifact_interface.py  dcp_assets.py  dcp_ops_indicators.py  dcp_scraper_interface.py  exceptions.py  extraction_interface.py  extraction_object.py  interface.py  login_params.py  notification_interface.py  notification_object.py  notifier_interface.py  s3_repository_interface.py  scraping_interface.py  scraping_object.py  scraping_params.py  storage_interface.py  value_object.py
lambda/web-scraping/src/infrastructure/: __init__.py  beautifulsoup_dcp_extractor.py  google_sheet_asset_record_repository.py  line_notifier.py  line_notifier_mock.py  s3_artifact_repository.py  s3_object_repository.py  s3_repository.py  selenium_dcp_scraper.py  selenium_dcp_scraper_mock.py  selenium_scraper.py  ssm_parameter.py
lambda/web-scraping/src/presentation/: __init__.py  asset_collection_handler.py  dcp_ops_notification.py
lambda/web-scraping/tests/: conftest.py
(+121 files in other folders)
