[project]
name = "dcp_etl"
version = "0.1.0"
description = "Add your description here"
packages = [{ include = "dcp_etl", from = "src" }]
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "aws-lambda-powertools>=3.11.0",
    "boto3>=1.38.8",
    "bs4>=0.0.2",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "selenium>=4.32.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]