[project]
name = "error-notification"
version = "0.1.0"
description = "CloudWatch Logs からエラーを検知し LINE に通知する Lambda 関数"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools[parser]>=3.11.0",
    "boto3>=1.38.8",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.8.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.15.0",
    "requests-mock>=1.12.1",
    "ruff>=0.11.8",
    "testcontainers[localstack]>=4.10.0",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pytest.ini_options]
pythonpath = ["src/../", "src"]
testpaths = ["tests"]
env = [
    "LINE_MESSAGE_PARAMETER_NAME=/test/line-message-parameters",
    "ERROR_BUCKET_NAME=test-error-bucket"
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
fail_under = 60
