[project]
name = "summary-notification"
version = "0.1.0"
description = "S3 に蓄積された資産情報を取得し、運用指標を計算してサマリを LINE 通知する Lambda 関数"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "requests>=2.32.3",
]

[tool.uv.sources]
shared = { workspace = true }

[dependency-groups]
dev = [
    "botocore[crt]>=1.42.42",
    "pytest>=8.3.5",
    "pytest-cov>=6.2.1",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.15.0",
    "requests-mock>=1.12.1",
    "ruff>=0.11.8",
    "testcontainers[localstack]>=4.10.0",
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
env = [
    "LINE_MESSAGE_PARAMETER_NAME=/test/line-message-parameters",
    "DATA_BUCKET_NAME=test-data-bucket",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
fail_under = 60
